refactoring of the dependency tracing and added type hinting. Isuru Fernando
(IF) developed the Universal2 (arm64) support. Min Ragan-Kelley (MinRK) did a
lot of work discussing OSX things with MB, and contributed fixes as well.

See `this Changelog site <https://keepachangelog.com/en/1.0.0>`_ for helpful
rules on making a good Changelog.

********
Releases
********

* [Unreleased]

* [0.10.5] - 2023-11-14

  * Fixed `UnicodeDecodeError` when an archive has non-ASCII characters.
    [#189](https://github.com/matthew-brett/delocate/issues/189)
  * Honor the ``SOURCE_DATE_EPOCH`` environment variable to support
    `reproducible builds
    <https://reproducible-builds.org/docs/source-date-epoch/>`_.
    [#187](https://github.com/matthew-brett/delocate/pull/187)

* [0.10.4] - 2022-12-17

  * Dependency paths with ``@rpath``, ``@loader_path`` and ``@executable_path``
    will now look at ``/usr/local/lib`` and ``/usr/lib`` after the
    rpaths, loader path, or executable path is searched.
    [#167](https://github.com/matthew-brett/delocate/pull/167)

* [0.10.3] - 2022-11-04

  * Support for Python 3.6 has been dropped.
  * Delocate no longer depends on the ``wheel`` API.
  * Running Delocate on already delocated wheels will no longer corrupt them.
    [#157](https://github.com/matthew-brett/delocate/pull/157)

* [0.10.2] - 2021-12-31

  Bugfix and compatibility release.

  * Ensured support for versions of wheel beyond 0.37.1.  If you are using older
    versions of Delocate then you may need to to pin ``wheel==0.37.1``.
    [#135](https://github.com/matthew-brett/delocate/issues/135)
  * Fixed crashes when ``otool`` gives multiple architectures in its output.
    This does not support different dependencies per-architecture.
    [#130](https://github.com/matthew-brett/delocate/pull/130)

* [0.10.1] - 2021-11-23

  Bugfix release.

  * Delocate will no longer fail when libraries use different install names to
    refer to the same library.